# A-ka_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.prod.yml  docker-compose.yml  erd.dbml  main.py  manual_notion_connect.py  manual_notion_hit_count_e2e.py  pyproject.toml  router_service_explanation.md  test.json  test.md  test_ai_router.py  test_category.py  test_db_diag.py  test_db_diag2.py  test_db_diag3.py  test_db_diag4.py  test_e2e_pipeline.py  test_failure_cases.py  test_knowledge_tasks.py  test_notion_connection_service.py  test_notion_service.py  test_req.py  test_save_link_only.py  test_similar_videos.py
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202605130001_squashed_baseline.py  202605130002_rename_constraints_to_naming_convention.py  45c4ac899d96_add_vector_column_to_youtube_knowledge_.py  8f7cfbed1a19_merge_migration_heads.py  a9886e977674_init.py  b8c3e4a7d2f1_add_notion_connection.py  d2f4c8a9b1e7_prevent_duplicate_notion_owners.py  e4b1c7d9a2f3_add_notion_summary_database_ids.py  fa51fd3fd00c_add_new_table_and_column.py
app/: main.py
app/agents/: state.py
app/core/: auth_dependencies.py  celery_app.py  config.py  database.py  llm.py  logging_config.py  security.py
app/models/: __init__.py  base.py  category.py  category_model.py  knowledge.py  knowledge_model.py  notion.py  user.py  user_model.py
app/repositories/: base.py  knowledge.py  vector.py
docs/: DB_연결작업_명세_유리.md  안티그래비티_인수인계_프롬프트.md  유리님_구현_가이드라인.md  유리님_참고_repository.py
(+31 files in other folders)
